# getraenkekassengeraete

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: debian.yml  docker.yml
docker-compose/: traefik.toml
src/: barcodeservice.rs  lib.rs  main.rs  nfcservice.rs  stornoservice.rs
src/middlewares/: force_local_request.rs  mod.rs
