[package]
name = "getraenkekassengeraete"
version = "0.1.0"
authors = ["Andreas Streichardt <andreas@mop.koeln>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"
async-stream = "0.3"
futures-util = "0.3"
pcsc = "2.4"
futures-core = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
libc = "0.2"
tokio-fd = "0.3"