[package]
name = "getraenkekassengeraete"
version = "0.1.0"
authors = ["Andreas Streichardt <andreas@mop.koeln>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
pcsc = "2.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.6", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tokio-stream = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
futures = "0.3"
tokio-fd = "0.3.0"
libc = "0.2.139"
async-stream = "0.3.3"
nix = { version = "0.26.1", default-features = false, features = ["term"] }
tower-http = { version = "0.3.5", features = ["cors"] }
axum-client-ip = "0.3.1"
